# cmake-project-template

./: README.md
project-directory/cpp-sources/: CMakeLists.txt
project-directory/cpp-sources/lib/: CMakeLists.txt
project-directory/cpp-sources/program/: CMakeLists.txt
project-directory/cpp-sources/unit-tests/: CMakeLists.txt
